# ComfyUI_BiRefNet_Universal

./: README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt  workflow_example.json
.github/workflows/: publish.yml
