[project]
name = "birefnet_universal"
description = "A comprehensive node package that seamlessly integrates all BiRefNet series models into ComfyUI"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["transformers<=4.48.0", "torch>=2.5.0", "torchvision>=0.20.0", "numpy<2", "opencv-python", "timm", "scipy", "scikit-image", "kornia", "einops", "tqdm", "prettytable", "huggingface-hub>0.25", "accelerate"]

[project.urls]
Repository = "https://github.com/moon7star9/ComfyUI_BiRefNet_Universal"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_BiRefNet_Universal"
Icon = ""
